Fixed some alignment

--- a/static/styles.css
+++ b/static/styles.css
@@ -90,7 +90,7 @@ nav {
 }
 
 .options-container {
-  margin:auto;
+  margin:7rem auto auto auto;
   width:70%;
   display: flex;
   flex-direction: row;
